# onnx-mlir

src/: main.cpp
src/Builder/: FrontendDialectTransformer.cpp
src/Dialect/ONNX/: ONNXOps.cpp
src/Tool/: CMakeLists.txt
src/Tool/ONNXMLIRRun/: driver.py
src/tool/: CMakeLists.txt
src/tool/onnf_run/: CMakeLists.txt  driver.py  onnf-run
test/backend/: test.py
